@@ -1,4 +1,5 @@
 0.5.1
+	- Heartbeat period
 	- Artifacts are OSGi bundles
 	- Renamed ReaderData -> SubscriptionData, WriterData PublicationData
 	  to be more in sync with DDS specification.
